# sh-openai-responses

./: .gitignore  Cargo.toml  README.md
src/: client.rs
src/models/: responses.rs
tests/: client_integration_test.rs
